--- a/notes.ipynb
+++ b/notes.ipynb
@@ -416,6 +416,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###   sample1\n",
+    "-   输入一个字符串: 'hello python'\n",
+    "-   输出: 'Hello Python'\n",
+    "-   两种实现方式: <br>\n",
+    "1.字符串方法<br>\n",
+    "2.re.split()<br>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input: 'hello python'\n",
+    "# Output: 'Hello Python'\n",
+    "\n",
+    "import re\n",
+    "input_str = 'hello python'\n",
+    "\n",
+    "# result = ' '.join([ x.capitalize() for x in re.split(r'\\ ', input_str) ])\n",
+    "# print(input_str.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  sample2\n",
+    "-   通讯录csv导出文件(emp.csv)格式如下:<br>\n",
+    "ID|Name|Sex|Age|Department|Phone<br>\n",
+    "1|Kyle|Male|28|Dev|90809809234<br>\n",
+    "2|Andy|Male|30|Sal|98734598578<br>\n",
+    "3|Kette|Female|24|Dev|99487623483<br>\n",
+    "4|Bob|Male|33|Sal|87998665648<br>\n",
+    "5|Winnie|Female|29|Sal|99076867898<br>\n",
+    "6|Dick|Female|24|Dev|93492349081\n",
+    "\n",
+    "-   使用open()函数读取文件内容, 查找并输出Andy的手机号码."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['98734598578']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# csv电话查找\n",
+    "# Input: 'Name'\n",
+    "# Output: 'Telephone'\n",
+    "FILE_NAME = 'emp.csv'\n",
+    "SPLIT = '\\|'\n",
+    "with open(FILE_NAME) as fp:\n",
+    "    data = fp.read()\n",
+    "\n",
+    "data_list = re.split(r'\\n', data)\n",
+    "del data_list[0]\n",
+    "\n",
+    "data_list = [ re.split(SPLIT, line) for line in data_list ]\n",
+    "data_list.remove([''])\n",
+    "\n",
+    "# print(data_list)\n",
+    "print([ line[-1] for line in data_list if line[1] == 'Andy' ])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
