--- a/notes.ipynb
+++ b/notes.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,17 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[77, 1, 9]\n",
+      "[9, 'a']\n",
       "(5, 2, 7)\n",
-      "{0, 3, 7}\n",
-      "{'key3': 'val3', 'key2': 'val2', 'key1': 'val1'}\n"
+      "{0, 3, 5, 7}\n",
+      "{'key2': 'val2', 'key3': 'val3', 'key1': 'val1'}\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
     "tuple1 = (5, 2, 7)\n",
     "\n",
     "# 集合\n",
-    "set1 = set([3, 7, 0])\n",
+    "set1 = set([3, 3, 7, 0])\n",
     "\n",
     "# 字典\n",
     "dict1 = {\n",
@@ -192,8 +192,11 @@
     "}\n",
     "\n",
     "list1[0] = 77\n",
+    "list1.append('a')\n",
+    "list1.remove(1)\n",
+    "del list1[0]\n",
     "# tuple1[0] = 4\n",
-    "set1.add(3)\n",
+    "set1.add(5)\n",
     "dict1['key3'] = 'val3'\n",
     "\n",
     "# 输出\n",
@@ -213,19 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abc True\n"
+      "a True\n"
      ]
     }
    ],
    "source": [
-    "input_val = 'abc'\n",
+    "input_val = 'a'\n",
     "if input_val == 'a':\n",
     "    print('a True')\n",
     "    \n",
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +331,7 @@
     "        print(i)\n",
     "        i += 1\n",
     "        continue\n",
+    "        print('kkk')\n",
     "        \n",
     "    else:\n",
     "        break"
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -429,9 +433,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python\n"
+     ]
+    }
+   ],
    "source": [
     "# Input: 'hello python'\n",
     "# Output: 'Hello Python'\n",
@@ -439,7 +451,9 @@
     "import re\n",
     "input_str = 'hello python'\n",
     "\n",
-    "# result = ' '.join([ x.capitalize() for x in re.split(r'\\ ', input_str) ])\n",
+    "# print(re.split(r'\\ ', input_str))\n",
+    "result = ' '.join([ x.capitalize() for x in re.split(r'\\ ', input_str) ])\n",
+    "print(result)\n",
     "# print(input_str.title())"
    ]
   },
@@ -457,12 +471,13 @@
     "5|Winnie|Female|29|Sal|99076867898<br>\n",
     "6|Dick|Female|24|Dev|93492349081\n",
     "\n",
+    "-   emp.csv下载地址: https://github.com/kylechenoO/AIPND-trial/blob/master/emp.csv\n",
     "-   使用open()函数读取文件内容, 查找并输出Andy的手机号码."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -471,6 +486,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['1|Kyle|Male|28|Dev|90809809234', '2|Andy|Male|30|Sal|98734598578', '3|Kette|Female|24|Dev|99487623483', '4|Bob|Male|33|Sal|87998665648', '5|Winnie|Female|29|Sal|99076867898', '6|Dick|Female|24|Dev|93492349081']\n",
+      "[['1', 'Kyle', 'Male', '28', 'Dev', '90809809234'], ['2', 'Andy', 'Male', '30', 'Sal', '98734598578'], ['3', 'Kette', 'Female', '24', 'Dev', '99487623483'], ['4', 'Bob', 'Male', '33', 'Sal', '87998665648'], ['5', 'Winnie', 'Female', '29', 'Sal', '99076867898'], ['6', 'Dick', 'Female', '24', 'Dev', '93492349081']]\n",
       "['98734598578']\n"
      ]
     }
@@ -485,12 +502,15 @@
     "    data = fp.read()\n",
     "\n",
     "data_list = re.split(r'\\n', data)\n",
+    "\n",
     "del data_list[0]\n",
+    "data_list.remove('')\n",
+    "print(data_list)\n",
     "\n",
+    "# re.sub()\n",
     "data_list = [ re.split(SPLIT, line) for line in data_list ]\n",
-    "data_list.remove([''])\n",
+    "print(data_list)\n",
     "\n",
-    "# print(data_list)\n",
     "print([ line[-1] for line in data_list if line[1] == 'Andy' ])"
    ]
   },
